fixing android bug where inline block a tags are wrapping

--- a/New_Website/stylesheet.css
+++ b/New_Website/stylesheet.css
@@ -169,17 +169,17 @@ p.work_title {
   margin: 10px 0 0 0;
 }
 p.work_description {
-  margin: 0 0 10px 0;
+  margin: 0 0 15px 0;
   font-size: 16px;
   color: #777;
 }
 a.button {
-  display: inline-block;
+  display: inline;
   text-shadow: 0 0 0 #000;
   border: solid 1px #000;
   border-radius: 20px;
   font-size: 14px;
-  padding: 15px 20px;
+  padding: 5px 15px;
   line-height: 0;
   text-decoration: none;
 }
